웹 스크래핑 이슈 수정 1. 회사코드 문자열 타입 변환 2. 세부 내역 탭 이슈 수정